<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:padding="20dp">

	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="4dp">

		<EditText
			android:id="@+id/et_purpose"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/purpose"
			android:inputType="number"
			android:enabled="false"
			android:focusable="false"/>
	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="4dp">

		<EditText
			android:id="@+id/et_coin"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/coin"
			android:inputType="number"
			android:enabled="false"
			android:focusable="false"/>
	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:passwordToggleEnabled="true"
		android:layout_marginBottom="4dp">

		<EditText
			android:id="@+id/et_account"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/account"
			android:inputType="number"/>
	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:passwordToggleEnabled="true"
		android:layout_marginBottom="4dp">

		<EditText
			android:id="@+id/et_external_internal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/external_internal"
			android:inputType="number"/>
	</android.support.design.widget.TextInputLayout>
</LinearLayout>